--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,11 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+
+        //Image-crop-picker
+        maven { url 'https://maven.google.com' }
+
+        //Image-crop-picker
+        maven { url "https://www.jitpack.io" }
     }
 }
