--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0"
